--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -42,6 +42,12 @@
             android:gravity="center"
             android:layout_marginBottom="20sp"
             />
+        <LinearLayout
+            android:id="@+id/linearLayoutEditContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,12 +55,15 @@
             android:layout_marginHorizontal="13sp"
             android:layout_marginBottom="10sp"
             app:boxBackgroundColor="@color/white"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/useremail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress">
             </com.google.android.material.textfield.TextInputEditText>
+
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -63,14 +72,17 @@
             android:layout_marginHorizontal="13sp"
             android:layout_marginBottom="10sp"
             app:boxBackgroundColor="@color/white"
+            app:passwordToggleEnabled="true"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/userpassword"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                >
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
-
+        </LinearLayout>
         <Button
             android:id="@+id/buttonAuth"
             android:layout_width="match_parent"
