--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#008000</color>
     <color name="flamingo">#F718FF</color>
+    <color name="red">#ff0000</color>
     <color name="link">#18AAFF</color>
 </resources>
