Базовая версия 2. Разложил классы по слоям entities, service, retrofit. Добавил сохранение email и пароля в настройках приложения. Добавил страницу главного окна - StartActivity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,12 @@
                     android:padding="15sp"
                     android:text="@string/continueString"
                     android:onClick="sendNameUser"/>
-
+                <TextView
+                    android:id="@+id/refUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:paddingBottom="25sp"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
