Добавил авторизацию при входе, проверку на регистрированного пользователя из данный SharedPref, переходы между страницами вложил в одни класс TransitionActivity, диалоговое окно о прохождении авторизации

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,7 +87,7 @@
             android:layout_marginHorizontal="13sp"
             android:layout_marginBottom="10sp"
             android:padding="15sp"
-            android:text="Зарегистрироваться"
+            android:text="@string/signUpVerb"
             android:onClick="registrationUser"/>
     </LinearLayout>
     <TextView
