--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="red">#ff0000</color>
     <color name="link">#18AAFF</color>
     <color name="toolbar">#DCDCDC</color>
+    <color name="activeIcon">#C7D0CC</color>
 </resources>
